staging/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-staging
spec:
  selector:
    matchLabels:
      run: nginx-staging
  replicas: 2
  template:
    metadata:
      labels:
        run: nginx-staging
    spec:
      containers:
      - name: nginx-staging
        image: nginx:1.14.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 16Mi
            cpu: 2m
