staging/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-staging
  namespace: staging
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nginx-staging.demo.com`)
      kind: Rule
      services:
        - name: nginx-staging
          port: 80
